
<resources>
<string name="app_name">mob_app</string>
<string name="color">Odaberi svoju boju kože</string>
<string name="prona_i_svoj_tip_ko_e">Pronađi svoj tip kože</string>
<string name="sun">sun</string>
<string name="odaberi_grad">Odaberi grad</string>
<string name="a">--------</string>
<string name="_0_c">0*C</string>
<string name="uvv">UV</string>
<string name="p">__</string>
<string name="fetching">Fetching___</string>
<string name="sun_image">sun image</string>
<string name="esun">sunn</string>
<string name="r">__</string>
<string name="za_titni_faktor">Zaštitni faktor</string>
    <string name="back">Back</string>
    <string name="dodatna_za_tita">Dodatna zaštita:</string>
    <string name="mjerna_stanica_za_pra_enje_uv_zra_enja">Mjerna stanica za praćenje UV zračenja</string>
</resources>