<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main"
    android:background="@drawable/background_col">

    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mjerna_stanica_za_pra_enje_uv_zra_enja"
            android:textAlignment="center"
            android:textColor="#FF7C02"
            android:textSize="35sp"
            android:textStyle="bold">

        </TextView>
    </RelativeLayout>

    <RelativeLayout

        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_color_of_skin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/color"
            android:textAlignment="center"
            android:textColor="#FF7C02"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <HorizontalScrollView
            android:id="@+id/scroll"
            android:scrollbarThumbHorizontal="@null"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_below="@id/txt_color_of_skin"
            android:layout_marginTop="17dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/circle3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="15dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/jsvjetla">

                </de.hdodenhof.circleimageview.CircleImageView>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circle1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/svjetla">

                </de.hdodenhof.circleimageview.CircleImageView>

                <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/circle2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ssvjetla">

                </de.hdodenhof.circleimageview.CircleImageView>


                <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/circle4"
                    android:layout_width="90dp"
                    android:layout_height="90dp"

                    android:layout_marginStart="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tamna">

                </de.hdodenhof.circleimageview.CircleImageView>

                <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/circle5"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="10dp"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/jtamna">

                </de.hdodenhof.circleimageview.CircleImageView>
            </LinearLayout>
        </HorizontalScrollView>



</RelativeLayout>


    <ImageView

        android:layout_width="427dp"
        android:layout_height="328dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-4dp"
        android:layout_marginEnd="-12dp"
        android:layout_marginBottom="-39dp"
        android:src="@drawable/sun_backgound"
        android:contentDescription="@string/sun">

    </ImageView>

</RelativeLayout>